# xco-mts

./: .env.example  .gitignore  LICENSE  MIGRATION_GUIDE.md  README.md  audio_processor.py  bot_commands.py  config.py  main.py  main2.py  meeting_recorder.py  pyproject.toml  requirements.txt  storage_service.py  structure_output.py  test_refactored.py  transcription_service.py  utils.py
